fix link align to center

--- a/style.css
+++ b/style.css
@@ -62,4 +62,5 @@ header {
 	margin-top: 3rem;
 	padding: 1rem 3rem;
 	border-radius: 100vmax;
+	text-align: center;
 }
